feat(core): Enhance multi-user support and improve financial features